syntax = "proto3";
package table;
option go_package = "/table";

message RoleShow
{
  uint64 role_id = 1; //角色id
  uint32 server_id = 2; //服务器id
  string role_name = 3; //角色名称
  uint32 lv = 4; //等级
  uint32 last_login_timer = 5; //上次登录时间
  uint32 last_logout_timer =6; //上次登出时间
}

message RoleShowList
{
  RoleShow role = 1;
}

message Account
{
  uint64 account_id = 1; //账号id
  string account_name = 2; //账号
  uint32 create_timer = 3; //创建时间
  uint32 login_timer = 4; //登录时间
  uint32 logout_timer = 5; //登出时间
  string phone = 6;  //len[1024]  手机号
  RoleShowList role_list = 7; //角色列表
}